--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,3 +6,25 @@
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+
+.loading {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: #ffffff;
+  z-index: 1000;
+  opacity: 0.8;
+  overflow: visible;
+}
+
+#loader-img {
+  position: fixed;
+  left: 50%;
+  top: 50%;
+  z-index: 1001;
+
+  img {
+    border-radius: 50%;
+  }
+}
